--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header p {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   margin-bottom: 20px;
-  height: 100%; /* لجعل جميع الكاردات بنفس الارتفاع */
+  height: 100%; 
   display: flex;
   flex-direction: column;
 }
@@ -39,8 +39,8 @@ header p {
 
 .product-card img {
   width: 100%;
-  height: 200px; /* ارتفاع ثابت للصور */
-  object-fit: cover; /* للحفاظ على نسبة الصورة */
+  height: 200px; 
+  object-fit: cover; 
   transition: transform 0.3s ease;
 }
 
